--- a/samples/bluetooth/mesh/light_ctrl/prj.conf
+++ b/samples/bluetooth/mesh/light_ctrl/prj.conf
@@ -57,3 +57,4 @@ CONFIG_BT_MESH_LIGHTNESS_SRV=y
 CONFIG_BT_MESH_LIGHT_CTRL_SRV=y
 CONFIG_BT_MESH_LIGHT_CTRL_SRV_TIME_ON=3
 CONFIG_BT_MESH_LIGHT_CTRL_SRV_TIME_PROLONG=3
+CONFIG_BT_MESH_SCENE_SRV=y
